--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "face-api.js": "^0.22.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-highcharts": "^16.1.0",
     "react-scripts": "4.0.3",
     "react-webcam": "^5.2.3",
     "tslib": "^2.1.0",
